--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 torch>=1.6.0
 torchaudio>=0.6.0
+torchvision
 numpy
 scipy
 scikit-learn
 opencv-python
 python_speech_features
-torchvision
+av
+ffmpeg-python
