--- a/.gcloudignore
+++ b/.gcloudignore
@@ -1,8 +1,20 @@
 .git
 .gcloudignore
 .gitignore
+__pycache__/
+.ipynb_checkpoints/
+logs/
 demo/
 model_weights/
 models/
 handlers/
-extra_files/
+*.ipynb
+*.py
+scripts.txt
+setup.txt
+archiver.sh
+*.avi
+*.wav
+*.md
+*.json
+*.md
