--- a/config.properties
+++ b/config.properties
@@ -3,3 +3,4 @@ management_address=http://0.0.0.0:8081
 metrics_address=http://0.0.0.0:8082
 default_workers_per_model=1
 max_request_size=10000000
+disable_token_authorization=true
